service-mesh/02-hipster/hipster/hipster-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hipster
  annotations:
    linkerd.io/inject: enabled
