service-mesh/02-hipster/hipster/adservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  namespace: hipster
  annotations:
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
    fluxcd.io/automated: "true"
    # sidecar.jaegertracing.io/inject: "true"
spec:
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: agilewaysreg.azurecr.io/hipster/adservice:9040
          ports:
            - containerPort: 9555
          resources:
            requests:
              cpu: 200m
              memory: 180Mi
            limits:
              cpu: 300m
              memory: 300Mi
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 15
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:9555"]
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 15
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:9555"]
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: hipster
  annotations:
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
spec:
  type: ClusterIP
  selector:
    app: adservice
  ports:
    - name: grpc
      port: 9555
      targetPort: 9555
