service-mesh/02-hipster/hipster/productcatalogservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
  namespace: hipster
  annotations:
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
    fluxcd.io/automated: "true"
    # sidecar.jaegertracing.io/inject: "true"
spec:
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: agilewaysreg.azurecr.io/hipster/productcatalogservice:11433
        ports:
        - containerPort: 3550
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:3550"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:3550"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  namespace: hipster
  annotations:
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice
  ports:
  - name: grpc
    port: 3550
    targetPort: 3550
