service-mesh/02-hipster/hipster/shippingservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  namespace: hipster
  annotations:
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
    fluxcd.io/automated: "true"
spec:
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
        - name: server
          image: agilewaysreg.azurecr.io/hipster/shippingservice:9054
          ports:
            - containerPort: 50051
          readinessProbe:
            periodSeconds: 5
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50051"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50051"]
              # env:
              #   - name: JAEGER_SERVICE_ADDR
              #     value: "jaeger-collector:14268"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  namespace: hipster
  annotations:
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
spec:
  type: ClusterIP
  selector:
    app: shippingservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
  namespace: hipster
  annotations:
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
spec:
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          livenessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-data
          resources:
            limits:
              memory: 256Mi
              cpu: 125m
            requests:
              cpu: 70m
              memory: 200Mi
      volumes:
        - name: redis-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  namespace: hipster
  annotations:
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
spec:
  type: ClusterIP
  selector:
    app: redis-cart
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
